Fixes #446, font size footer on mobile

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1384,6 +1384,7 @@ font-family: 'Roboto', sans-serif; font-weight:400;} .remote_participant span{ c
   padding-bottom:20px;
   background-color: #333333;
 }
+
 #footer h3 {
     font-family:'Oswald-Medium';
     font-size: 20px;
@@ -1398,4 +1399,18 @@ font-family: 'Roboto', sans-serif; font-weight:400;} .remote_participant span{ c
     padding-right:10px;
     padding-bottom:10px;
     width  :60px;
+}
+
+/* fix footer sizes on small devices */
+@media (max-width:450px){
+  #footer h3 {
+    font-size: 14px;
+  }
+  #footer p {
+    font-size: 10px;
+  }
+  #footer img {
+    font-size: 10px;
+    width: 40px;
+  }
 }
